--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="header__wrapper">
 					<!-- !LEFT! -->
 					<div class="header__left">
-						<img src="/assets/logo.jpg" alt="" />
+						<img src="assets/bang.png" alt="" />
 						<nav>
 							<ul class="header__nav">
 								<li><a href="">Home</a></li>
@@ -58,10 +58,216 @@
 						<small>FREELANCE DIGITAL DESIGNER</small>
 						<h1>Hello, I'm <span>DOGS</span> Welcome to my World.</h1>
 					</div>
+					<div class="banner__right">
+						<img
+							src="assets/ZAMN__-removebg-preview-removebg-preview.png"
+							alt=""
+						/>
+					</div>
 				</div>
 			</div>
-			<div class="banner__right"></div>
-			<img src="/assets/human2.png" alt="" />
 		</section>
+		<!-- ABOUTME -->
+		<section class="about">
+			<div class="container">
+				<div class="about__wrapper">
+					<div class="about__left">
+						<img src="assets/download (2).jpg" alt="" />
+					</div>
+					<div class="about__right">
+						<h3>About Me</h3>
+						<p>
+							There are manu variations of passages of Lorem Ipsum available,
+							but the majority have suffered <span>alteration</span> in some
+							form, by injected humour, or randomised words which dont look even
+							slightly believable. If you are going to use a passage of Lorem
+							Ipsums
+						</p>
+
+						<ul class="about__title">
+							<li>Main Skills</li>
+							<li>Awards</li>
+							<li>Experiences</li>
+							<li>Education</li>
+						</ul>
+						<ul class="about__main-skills">
+							<li>
+								<h5>User experience design</h5>
+								<span> -UI/UX</span>
+							</li>
+							<li class="about__main-desc">
+								Delight the user and make it work
+							</li>
+							<li>
+								<h5>User experience design</h5>
+								<span> -UI/UX</span>
+							</li>
+							<li class="about__main-desc">
+								Delight the user and make it work
+							</li>
+							<li>
+								<h5>User experience design</h5>
+								<span> -UI/UX</span>
+							</li>
+							<li class="about__main-desc">
+								Delight the user and make it work
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- SERVICES -->
+		<section class="services">
+			<div class="container">
+			  <div class="services__title">
+				<h3>My Awesome Services</h3>
+				<p>
+				  There are many variation of passages of Lorem Ipsum <br />
+				  available, but the majority have suffered alteration.
+				</p>
+			  </div>
+			  <div class="services__wrapper">
+				<div class="services__card">
+				  <span><i class="fa-brands fa-chromecast"></i></span>
+				  <h4>Business Strategy</h4>
+				  <p>
+					I throw my self down among the tall grass by the stream as I lie
+					close to the earth
+				  </p>
+				</div>
+				<div class="services__card">
+				  <span><i class="fa-brands fa-chromecast"></i></span>
+				  <h4>Business Strategy</h4>
+				  <p>
+					I throw my self down among the tall grass by the stream as I lie
+					close to the earth
+				  </p>
+				</div>
+				<div class="services__card">
+				  <span><i class="fa-brands fa-chromecast"></i></span>
+				  <h4>Business Strategy</h4>
+				  <p>
+					I throw my self down among the tall grass by the stream as I lie
+					close to the earth
+				  </p>
+				</div>
+				<div class="services__card">
+				  <span><i class="fa-brands fa-chromecast"></i></span>
+				  <h4>Business Strategy</h4>
+				  <p>
+					I throw my self down among the tall grass by the stream as I lie
+					close to the earth
+				  </p>
+				</div>
+				<div class="services__card">
+				  <span><i class="fa-brands fa-chromecast"></i></span>
+				  <h4>Business Strategy</h4>
+				  <p>
+					I throw my self down among the tall grass by the stream as I lie
+					close to the earth
+				  </p>
+				</div>
+				<div class="services__card">
+				  <span><i class="fa-brands fa-chromecast"></i></span>
+				  <h4>Business Strategy</h4>
+				  <p>
+					I throw my self down among the tall grass by the stream as I lie
+					close to the earth
+				  </p>
+				</div>
+			  </div>
+			</div>
+		  </section>
+		  
+          <!-- CLIENT -->
+<div class="client">
+	<div class="container">
+		<div class="client__title">
+			<h3>My Best Client</h3>
+				<p>
+				  There are many variation of passages of Lorem Ipsum <br />
+				  available, but the majority have suffered alteration.
+				</p>
+		</div>
+		<div class="client__wrapper">
+			<div class="client__card">
+				<img src="assets/11e6fb31-ee25-41a7-9641-bc3d26681214.jpg" alt="">
+		</div>
+
+		<div class="client__card">
+			<img src="assets/b238b64a-e0eb-40c0-9836-c8023dd0a5c9.jpg" alt="">
+	</div>
+
+	<div class="client__card">
+		<img src="assets/drake.jpg" alt="">
+</div>
+
+<div class="client__card">
+	<img src="assets/bbl drake.jpg" alt="">
+</div>
+
+<div class="client__card">
+	<img src="assets/c34bbda6-e9ea-44a2-b436-0c15ffae21e1.jpg" alt="">
+</div>
+
+<div class="client__card">
+	<img src="assets/download.jpg" alt="">
+</div>
+
+<div class="client__card">
+	<img src="assets/NOW.jpg" alt="">
+</div>
+
+<div class="client__card">
+	<img src="assets/when your bf apologize and says he loves you after an argument _3.jpg" alt="">
+</div>
+
+<div class="client__card">
+	<img src="assets/download (1).jpg" alt="">
+</div>
+
+	</div>
+</div>
+			<!-- my latest proj -->
+			<section class="latestproj">
+                <div class="container">
+                    <div class="latestproj__title">
+                        <h3>My Latest Projects</h3>
+                        <p>
+                          There are many variation of passages of Lorem Ipsum <br />
+                          available, but the majority have suffered alteration.
+                        </p>
+                    </div>
+                    <div class="latestproj__wrapper">
+                        <div class="latestproj__card">
+                            <img src="assets/FOR ALL THE DOGS.jpg" alt="">
+                        </div>
+						<div class="latestproj__card">
+                            <img src="assets/The Dark Lane Tapes by Drake.jpg" alt="">
+                        </div>
+						<div class="latestproj__card">
+                            <img src="assets/TAKE CARE.jpg" alt="">
+                        </div>
+						<div class="latestproj__card">
+                            <img src="assets/MORE LIFE.jpg" alt="">
+                        </div>
+						<div class="latestproj__card">
+                            <img src="assets/Scorpion.jpg" alt="">
+                        </div>
+						<div class="latestproj__card">
+                            <img src="assets/c2a1bed7-abb2-4041-9a28-a83472799ac4.jpg" alt="">
+                        </div>
+			<div class="latestproj__text">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</div>
+		   
+		<script src="/script.js"></script>
 	</body>
 </html>
