--- a/index.html
+++ b/index.html
@@ -242,32 +242,42 @@
                     </div>
                     <div class="latestproj__wrapper">
                         <div class="latestproj__card">
-                            <img src="assets/FOR ALL THE DOGS.jpg" alt="">
+                            <!-- <img src="assets/FOR ALL THE DOGS.jpg" alt=""> -->
+							<p>Development</p>
+						 <h3>getting tickets to <br> the next show</h3>
+						 <a href="">CASE STUDIES</a>
                         </div>
 						<div class="latestproj__card">
-                            <img src="assets/The Dark Lane Tapes by Drake.jpg" alt="">
+                            <!-- <img src="assets/The Dark Lane Tapes by Drake.jpg" alt=""> -->
+							<p>Development</p>
+							<h3>getting tickets to <br> the next show</h3>
+							<a href="">CASE STUDIES</a>
                         </div>
 						<div class="latestproj__card">
-                            <img src="assets/TAKE CARE.jpg" alt="">
+                            <!-- <img src="assets/TAKE CARE.jpg" alt=""> -->
+							<p>Development</p>
+							<h3>getting tickets to <br> the next show</h3>
+							<a href="">CASE STUDIES</a>
                         </div>
 						<div class="latestproj__card">
-                            <img src="assets/MORE LIFE.jpg" alt="">
+                            <!-- <img src="assets/MORE LIFE.jpg" alt=""> -->
+							<p>Development</p>
+							<h3>getting tickets to <br> the next show</h3>
+							<a href="">CASE STUDIES</a>
                         </div>
 						<div class="latestproj__card">
-                            <img src="assets/Scorpion.jpg" alt="">
+                            <!-- <img src="assets/Scorpion.jpg" alt=""> -->
+							<p>Development</p>
+							<h3>getting tickets to <br> the next show</h3>
+							<a href="">CASE STUDIES</a>
                         </div>
 						<div class="latestproj__card">
-                            <img src="assets/c2a1bed7-abb2-4041-9a28-a83472799ac4.jpg" alt="">
+                            <!-- <img src="assets/c2a1bed7-abb2-4041-9a28-a83472799ac4.jpg" alt=""> -->
+							<p>Development</p>
+							<h3>getting tickets to <br> the next show</h3>
+							<a href="">CASE STUDIES</a>
                         </div>
-			<div class="latestproj__text">
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-			</div>
-		   
+			
 		<script src="/script.js"></script>
 	</body>
 </html>
