--- a/index.html
+++ b/index.html
@@ -249,32 +249,32 @@
                         </div>
 						<div class="latestproj__card">
                             <!-- <img src="assets/The Dark Lane Tapes by Drake.jpg" alt=""> -->
-							<p>Development</p>
-							<h3>getting tickets to <br> the next show</h3>
+							<p>free lancer</p>
+							<h3>you can see your <br> Portfolio</h3>
 							<a href="">CASE STUDIES</a>
                         </div>
 						<div class="latestproj__card">
                             <!-- <img src="assets/TAKE CARE.jpg" alt=""> -->
-							<p>Development</p>
-							<h3>getting tickets to <br> the next show</h3>
+							<p>App Development</p>
+							<h3>The language of  <br> developer</h3>
 							<a href="">CASE STUDIES</a>
                         </div>
 						<div class="latestproj__card">
                             <!-- <img src="assets/MORE LIFE.jpg" alt=""> -->
 							<p>Development</p>
-							<h3>getting tickets to <br> the next show</h3>
+							<h3>how to find the <br> right agency for <br> your specific <br> product</h3>
 							<a href="">CASE STUDIES</a>
                         </div>
 						<div class="latestproj__card">
                             <!-- <img src="assets/Scorpion.jpg" alt=""> -->
-							<p>Development</p>
-							<h3>getting tickets to <br> the next show</h3>
+							<p>mobile app</p>
+							<h3>the ultimate <br> guide to agency</h3>
 							<a href="">CASE STUDIES</a>
                         </div>
 						<div class="latestproj__card">
                             <!-- <img src="assets/c2a1bed7-abb2-4041-9a28-a83472799ac4.jpg" alt=""> -->
 							<p>Development</p>
-							<h3>getting tickets to <br> the next show</h3>
+							<h3>how to turn your <br>agency from zero <br> to hero</h3>
 							<a href="">CASE STUDIES</a>
                         </div>
 			
