tinapos na ni da?

--- a/index.html
+++ b/index.html
@@ -277,7 +277,60 @@
 							<h3>how to turn your <br>agency from zero <br> to hero</h3>
 							<a href="">CASE STUDIES</a>
                         </div>
+		
+		</div>
+	</div>
+</div>
 			
+
+	<!-- hire me  please -->
+
+	<section class="hireme">
+		<div class="container">
+			<div class="hire__wrapper">
+				<div class="hire__left">
+					<h3>Hire Me</h3>
+					<p>I am available for freelance work. Connect with me <br>via phone:
+						<span> 01912-123456</span> or email <span>admin@example.com</span></p>
+						<ul class="hire__info">
+							<li>Your Name *</li>
+							<li>Your Email *</li>
+							<li>Write a Subject</li>
+							<li>Your Message</li>
+						</ul>
+						<a href="">SEND MESSAGE</a>
+				</div>
+				<div class="hire__right">
+					<img src="/assets/ayeee.jpg" alt="">
+				</div>
+			</div>
+		</div>
+	   </section>
+
+	   
+               <!-- footer lamaw -->
+	   <footer class="footer">
+		<div class="container">
+			<div class="footer__wrapper">
+				<div class="footer__left">
+					<img src="/assets/logo.jpg" alt="">
+				</div>
+				<div class="footer__mid">
+					<ul class="footer__nav">
+						<li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+						<li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+						<li><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+						<li><a href=""><i class="fa-brands fa-instagram"></i></a></li> 
+					</ul>
+				</div>
+				<div class="footer__right">
+					<p>© 2021. All rights reserved by Rainbow-Themes.</p>
+				</div>
+			</div>
+		</div>
+	   </footer>
+
+
 		<script src="/script.js"></script>
 	</body>
 </html>
